--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "nanoid": "^4.0.0",
+    "sass": "^1.54.9",
     "vue": "^3.2.37"
   },
   "devDependencies": {
